<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".EventActivity">

    <LinearLayout
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:columnCount="3"
            android:rowCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:text="@string/event_start"></TextView>

            <TextView
                android:id="@+id/event_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:hint="@string/event_date"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/event_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:hint="@string/event_time"
                android:textSize="20sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/event_end"></TextView>

            <TextView
                android:id="@+id/event_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:hint="@string/event_date"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/event_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:hint="@string/event_time"
                android:textSize="20sp"></TextView>
        </GridLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/event_freq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
            </TextView>
            <Spinner
                android:id="@+id/event_freq_spin"
                android:layout_marginStart="40dp"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown">

            </Spinner>
        </LinearLayout>
        <GridLayout
            android:columnCount="2"
            android:rowCount="2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:text="@string/event_remind_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
            </TextView>
            <TextView
                android:id="@+id/event_remind_time"
                android:background="@color/colorPrimary"
                android:text="none"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textSize="20sp"
                />
        </GridLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_weight="4"
                android:text="@string/event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
            </TextView>
            <Spinner
                android:id="@+id/event_type_spin"
                android:layout_weight="5"
                android:layout_width="50dp"
                android:layout_height="wrap_content">
            </Spinner>
            <ImageView
                android:id="@+id/event_color"
                android:layout_weight="1"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/event_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <EditText
                android:id="@+id/event_header"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20sp"
                android:hint="@string/event_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp">
            </EditText>
            <EditText
                android:id="@+id/event_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/event_detail"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:isScrollContainer="true"
                android:textSize="20sp">
            </EditText>
            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/loc_delete_img"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:src="@drawable/event_delete">
                </ImageView>
                <TextView
                    android:id="@+id/event_loc"
                    android:layout_gravity="center_vertical"
                    android:text=""
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="10"
                    android:isScrollContainer="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp">
                </TextView>
                <ImageView
                    android:id="@+id/event_loc_img"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:src="@drawable/event_loc"
                    android:layout_gravity="center_vertical">
                </ImageView>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
            <Button
                android:id="@+id/event_save"
                android:layout_marginTop="10dp"
                android:text="@string/btn_save"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>