<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:background="#FFFFFF"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="zil sesi seçme gelecek"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
        <LinearLayout
            android:background="#FFFFFF"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/sett_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp">
            </TextView>
            <Spinner
                android:id="@+id/sett_time"
                android:spinnerMode="dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:background="#FFFFFF"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/sett_freq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp">
            </TextView>
            <Spinner
                android:id="@+id/sett_freq"

                android:spinnerMode="dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <Switch
                android:id="@+id/sett_switch"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Switch>
            <TextView
                android:id="@+id/sett_mode"
                android:text="@string/sett_light"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <Button
            android:id="@+id/sett_save"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:text="@string/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>


</LinearLayout>